It loads in jar form now...